--- a/2021_jug_augsburg.html
+++ b/2021_jug_augsburg.html
@@ -149,8 +149,15 @@ Diese Folien: https://bit.ly/ml-jug-augsburg
 
 https://www.menti.com/9hq9bmakix
 </section>
-  
 
+<section data-markdown>
+### Roadmap
+  
+1. Thesis: Coding
+2. Antithesis: Machine Learning
+3. Synthesis
+    </section>
+  
 
 <!-- Das ist eigentlich ein anderer Talk
 <section data-markdown>
@@ -180,6 +187,15 @@ https://www.menti.com/9hq9bmakix
 Can we predict the risk of an accident? 
 </section>
   
+
+<section data-markdown>
+### Roadmap
+  
+1. ***Thesis: Coding***
+2. Antithesis: Machine Learning
+3. Synthesis
+    </section>
+
   <section data-markdown>
 ## We know something about the real world, let us express this as a set of rules
 	</section>
@@ -383,6 +399,16 @@ this was just
 
 	  </section>
 	
+<section data-markdown>
+### Roadmap
+  
+1. Thesis: Coding
+2. ***Antithesis: Machine Learning***
+3. Synthesis
+    </section>
+
+
+
 <section data-markdown class="fragments">
 ### Why not let a machine do the data driven coding? 
 
@@ -421,7 +447,7 @@ http://scikit-learn.org/stable/modules/tree.html#tree-algorithms-id3-c4-5-c5-0-a
 </textarea>
 </section>
 
-<!-- <section data-markdown>
+<section data-markdown>
 ### What is the best split?
 
 * choose a feature to split on (either random or best)
@@ -436,7 +462,7 @@ https://machinelearningmastery.com/classification-and-regression-trees-for-machi
 
 </small>
 
-</section> -->
+</section>
 
 <section data-markdown>
     <textarea data-template>
@@ -448,7 +474,15 @@ https://machinelearningmastery.com/classification-and-regression-trees-for-machi
 
 </textarea>
 </section>
-	
+
+<section data-markdown>
+  ### Roadmap
+    
+  1. Thesis: Coding
+  2. Antithesis: Machine Learning
+  3. ***Synthesis***
+      </section>
+  
 <section data-markdown class="fragments">
 ### You can turn them into each other
 
@@ -556,7 +590,7 @@ easy to automatically generate explanation
   <textarea data-template>
 ### Naive Gaussian Bayes
 
-![](img/plain-dt.png)
+![](img/gaussian-bayes.png)
 
 60% on known and unknown data
 
