www anstatt wwww

--- a/2021_jug_augsburg.html
+++ b/2021_jug_augsburg.html
@@ -610,11 +610,11 @@ easy to automatically generate explanation
 <textarea data-template>
 ### embarc Spicker für Machine Learning
 
-<a href='https://wwww.embarc.de/spicker/#10'>
+<a href='https://www.embarc.de/spicker/#10'>
 <img src='img/Architektur-Spicker10-teaser.jpg'>
 </a>
 
-https://wwww.embarc.de/spicker/#10
+https://www.embarc.de/spicker/#10
 </textarea>
 </section>
 
